# fastmcp_route_tomtom_project

./: .dockerignore  .env  .env.example  .gitignore  BRANCH_READY_FOR_TESTING.md  COUPLING_ANALYSIS_AND_IMPROVEMENTS.md  Dockerfile  FASTMCP_CLIENT_SETUP.md  MCP_SERVER_USAGE_GUIDE.md  MIGRATION_TO_GOOGLE_MAPS.md  Makefile  README.md  SETTINGS_ANALYSIS.md  WAYPOINTS_ROUTING_ANALYSIS.md  architecture.ini  debug_tools.py  pyproject.toml  pyrightconfig.json  pytest.ini  start_server.py  start_streamable_http.py  test_detailed_route.py  test_mcp_client.py  test_simple.py  test_streamable_server.py  test_traffic_analysis.py
app/application/: errors.py
app/application/constants/: __init__.py  validation_constants.py
app/application/dto/: calculate_route_dto.py  delete_destination_dto.py  detailed_route_dto.py  detailed_route_response_dto.py  geocoding_dto.py  list_destinations_dto.py  save_destination_dto.py  search_destinations_dto.py  traffic_dto.py  update_destination_dto.py  weather_dto.py
app/di/: container.py
app/domain/: errors.py
app/interfaces/: __init__.py
client_config_examples/: claude_desktop_config.json  claude_desktop_http_config.json  claude_desktop_stdio_config.json  fastmcp_http_config.json  fastmcp_vscode_config.json  mcp_remote_config.json  streamable_http_alt_config.json  streamable_http_config.json  streamable_http_simple_config.json  vscode_mcp_config.json
instructions/: CLEAN_ARCHITECTURE_USAGE_Instruction.md  DETAILED_ROUTE_TOOL_GUIDE.md  INTEGRATED_FLOW_README.md  MCP_SERVER_USAGE_GUIDE_Instruction.md  README.md  SETUP_GUIDE.md
interfaces/mcp/: server.py
prompt/: LLM_GUIDE_FOR_AUTOMATIC_CODE_GENERATION.md  PROJECT_OVERVIEW.md  clean_arch_prompt_v5_VI.txt
prompt/project architecture/: clean_arch_prompt_v5_VI.txt
prompt/review/: feedback.md
prompt/specs/: block_creation_instruction.txt  diagram_instruction.md
resources/: Tomtom.postman_collection.json  clean_arch_MASTER_prompt_v2.txt
test_client/: .gitignore  README.md  package-lock.json  package.json  test_clean_server.py  test_client.js
tests/: conftest.py
tests/application/: test_use_case_contract.py
tests/fixtures/: mock_database.py
tests/integration/: test_sqlite_to_mcp_tools.py
tests/interfaces/: __init__.py
(+181 files in other folders)
