
[project]
name = "fastmcp-route-tomtom"
version = "0.1.0"
description = "FastMCP server exposing route calculation using TomTom Routing API"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name="Your Name"}]
dependencies = [
  "fastmcp",
  "aiohttp",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-select = ["E","F","W","I","N","UP","ANN","B","C4","DTZ","ISC","PIE","PT","RET","SIM","PLR","PLE","PERF","RUF","D"]
ignore = ["ANN101","ANN102"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers --maxfail=1"
testpaths = ["tests"]
