
[project]
name = "fastmcp-route-tomtom"
version = "0.1.0"
description = "FastMCP server exposing route calculation using TomTom Routing API"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name="Your Name"}]
dependencies = [
  "fastmcp>=0.1.0",
  "aiohttp>=3.9.0,<4.0.0",
  "aiosqlite>=0.19.0",
  "pydantic>=2.0.0",
  "structlog>=23.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.25.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-select = ["E","F","W","I","N","UP","ANN","B","C4","DTZ","ISC","PIE","PT","RET","SIM","PLR","PLE","PERF","RUF","D"]
ignore = ["ANN101","ANN102","F401"]

[tool.ruff.lint.isort]
known-first-party = ["fastmcp"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers --maxfail=1"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
